examples/test/testpolicy12513.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12513
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key38: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value42
          key19: value6
          key23: value18
      podSelector:
        matchLabels:
          key42: value26
